--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>coffee-beans.ico">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <title>Coffeebeans</title>
+    <meta property="og:title" content="精品咖啡豆">
+    <meta property="og:description" content="精品咖啡豆！有高品質的咖啡豆才有好咖啡！那麼什麼才是高品質的咖啡豆，咖啡的香氣，來自咖啡烘焙">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://hexschool-api.s3.us-west-2.amazonaws.com/custom/KhTLAXpnObyZFg5pTNVivJJNg8ToVhnR0YqTlxvyDWsI0suOE9vbZQ6WVvit474bf7vReNco3yBbPF4MmGSyAvZPj7WAY2s4UjgwNK4JwrU0ewYaNvlv8EtyOC4T82RQ.jpg">
+    <meta name="keywords" content="精品咖啡豆,高品質咖啡豆,咖啡烘焙,手沖咖啡">
   </head>
   <body>
     <noscript>
